--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.25"
+    "@fontsource/roboto": "^5.2.9",
+    "@mdi/font": "^7.4.47",
+    "dayjs": "^1.11.19",
+    "vite-plugin-vuetify": "^2.1.3",
+    "vue": "^3.5.25",
+    "vuetify": "^3.11.8",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/webfontloader": "^1.6.38",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
